[tool.poetry]
name = "typeanddrow"
version = "0.1.0"
description = ""
authors = ["fevse <fedulov.v.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
cat = "typeanddrow.scripts.cat:main"
dog = "typeanddrow.scripts.dog:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
