[tool.poetry]
name = "typeanddrow"
version = "0.1.0"
description = ""
authors = ["fevse <fedulov.v.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
draw-cat = "typeanddrow.scripts.draw_cat:main"
draw-dog = "typeanddrow.scripts.draw_dog:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
